# Excuse_generator

./: .env  app.py  client.py  excuses.json  main.py  pyproject.toml  requirements.txt  speak_module.py
agents/: excuse_agent.py  proof_agent.py
